text overflow issue

--- a/public/styles.css
+++ b/public/styles.css
@@ -108,7 +108,8 @@ html, body {
 
 .chatbox .message {
     padding:10px;
-    overflow-x:hidden;
+    overflow-wrap:break-word;
+    max-width: 80%;
 }
 
 .chatbox .user {
@@ -135,8 +136,10 @@ html, body {
 .userBox {
     position:relative;
     text-align: center;
-    padding-top: 10%;
-    padding-bottom: 10%;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    padding-top:10px;
+    padding-bottom: 10px;
     width:100%;
     height:3%;
     border-radius:5%;
